force-app/main/default/objects/RT1__MeetingMemberActivity__c/RT1__MeetingMemberActivity__c.object-meta.xml
<CustomObject>
    <label>ReadyTalk Meeting Member Activity</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ReadyTalk Meeting Member Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>