force-app/main/default/objects/RT1__MeetingMemberActivity__c/fields/RT1__Information__c.field-meta.xml
<CustomField>
    <fullName>RT1__Information__c</fullName>
    <label>Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>