force-app/main/default/objects/RT1__MeetingMemberActivity__c/fields/RT1__MeetingMember__c.field-meta.xml
<CustomField>
    <fullName>RT1__MeetingMember__c</fullName>
    <label>ReadyTalk Meeting Member</label>
    <referenceTo>RT1__ReadyTalkMeetingMember__c</referenceTo>
    <relationshipLabel>Meeting Member Activities</relationshipLabel>
    <relationshipName>MeetingMemberActivities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>