force-app/main/default/objects/RT1__MeetingMemberActivity__c/fields/RT1__ReadytalkAttendanceId__c.field-meta.xml
<CustomField>
    <fullName>RT1__ReadytalkAttendanceId__c</fullName>
    <externalId>true</externalId>
    <label>Readytalk Attendance Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>