force-app/main/default/objects/RT1__MeetingMemberActivity__c/fields/RT1__ReadyTalkMeeting__c.field-meta.xml
<CustomField>
    <fullName>RT1__ReadyTalkMeeting__c</fullName>
    <formula>RT1__MeetingMember__r.RT1__MeetingName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReadyTalk Meeting</label>
    <type>Text</type>
</CustomField>